# elarb

./: ANALYSIS.md  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.rst  Makefile  PROBLEM.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yaml
data/: example.csv  nordpool2021.csv  nordpool2022.csv  nordpool_2022_Q3.csv  nordpool_21_22.csv  pvwatts.csv  simulation_21_22.csv  simulation_monthly_21_22.csv
docs/: Makefile  conf.py  elarb.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
elarb/: datasets.py  models.py  policy.py
notebooks/: back-of-the-envelope.ipynb  battery.ipynb  cvxpy.ipynb  example.ipynb  policy.ipynb  scenarios-monthly.ipynb  scenarios.ipynb  simulation.ipynb  simulator.ipynb  test.ipynb  tyngdebatteri.ipynb  using-lib.ipynb  volatilitet.ipynb
src/elarb/: __init__.py  datasets.py  models.py  optimiser.py  policy.py  util.py
tests/: __init__.py  test_elarb.py  test_policy.py
