[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]


[project]
name = "elarb"
description = "Library for x"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cvxpy",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
tests = [
    'build',
    'twine',
    'pytest',
    'flake8',
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default

